force-app/main/default/objects/SiteuserpresentationSavedSearch__c/SiteuserpresentationSavedSearch__c.object-meta.xml
<CustomObject>
    <label>SiteuserpresentationSavedSearch</label>
    <nameField>
        <label>SiteuserpresentationSavedSearch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Siteuserpresentationsavedsearches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>