force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Custom_Variety_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Variety_Name__c</fullName>
    <label>Custom Variety Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>