force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Head_to_Head__c.field-meta.xml
<CustomField>
    <fullName>Head_to_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head to Head</label>
    <type>Checkbox</type>
</CustomField>