force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/PresentationSSProductName__c.field-meta.xml
<CustomField>
    <fullName>PresentationSSProductName__c</fullName>
    <label>PresentationSSProductName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDMName</fullName>
            </value>
            <value>
                <fullName>CustomerName</fullName>
            </value>
            <value>
                <fullName>CustomName</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>