force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Product_Data_Page__c.field-meta.xml
<CustomField>
    <fullName>Product_Data_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Data Page</label>
    <type>Checkbox</type>
</CustomField>