force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Regression_Chart__c.field-meta.xml
<CustomField>
    <fullName>Regression_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regression Chart</label>
    <type>Checkbox</type>
</CustomField>