force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Siteuserpresentation__c.field-meta.xml
<CustomField>
    <fullName>Siteuserpresentation__c</fullName>
    <label>Siteuserpresentation</label>
    <referenceTo>Siteuserpresentation__c</referenceTo>
    <relationshipLabel>Siteuserpresentationsavedsearches</relationshipLabel>
    <relationshipName>Siteuserpresentationsavedsearches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>