force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/SiteUserSavedSearch__c.field-meta.xml
<CustomField>
    <fullName>SiteUserSavedSearch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUserSavedSearch</label>
    <referenceTo>SiteUserSavedSearch__c</referenceTo>
    <relationshipLabel>Siteuserpresentationsavedsearches</relationshipLabel>
    <relationshipName>Siteuserpresentationsavedsearches</relationshipName>
    <type>Lookup</type>
</CustomField>