force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Stability_Chart__c.field-meta.xml
<CustomField>
    <fullName>Stability_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stability Chart</label>
    <type>Checkbox</type>
</CustomField>