force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Stability_Checks__c.field-meta.xml
<CustomField>
    <fullName>Stability_Checks__c</fullName>
    <label>Stability Checks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>