force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Yield_Data_Table__c.field-meta.xml
<CustomField>
    <fullName>Yield_Data_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yield Data Table</label>
    <type>Checkbox</type>
</CustomField>