force-app/main/default/objects/SiteuserpresentationSavedSearch__c/fields/Yield_Summary__c.field-meta.xml
<CustomField>
    <fullName>Yield_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yield Summary</label>
    <type>Checkbox</type>
</CustomField>